...
        contentContainerStyle={
          isPericopeList ? styles.cardContent : styles.content
        }
        style={styles.list}
        removeClippedSubviews={isPericopeList ? false : undefined}
        showsVerticalScrollIndicator={false}
        testID="bible-tab"
      />
    </View>
  );
}

const styles = StyleSheet.create({
...
